; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_transition_time_values.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_transition_time_values.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_state_transition = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bt_mesh_state_transition*, i32, i32)* @transition_time_values to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @transition_time_values(%struct.bt_mesh_state_transition* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bt_mesh_state_transition*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bt_mesh_state_transition* %0, %struct.bt_mesh_state_transition** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %9 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %12 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %28

16:                                               ; preds = %3
  %17 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %18 = call i32 @tt_values_calculator(%struct.bt_mesh_state_transition* %17)
  %19 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %20 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %23 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %22, i32 0, i32 4
  %24 = load i32, i32* %23, align 4
  %25 = sdiv i32 %21, %24
  %26 = load %struct.bt_mesh_state_transition*, %struct.bt_mesh_state_transition** %4, align 8
  %27 = getelementptr inbounds %struct.bt_mesh_state_transition, %struct.bt_mesh_state_transition* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 4
  br label %28

28:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @tt_values_calculator(%struct.bt_mesh_state_transition*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
